fix alignment

--- a/assets/css/dashboard.scss
+++ b/assets/css/dashboard.scss
@@ -16,6 +16,7 @@ body {
 .dashboard {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   height: 100%;
 }
 
